Cleaned logs and plotter

--- a/plotter/spec-cpu-class-contrib.ipynb
+++ b/plotter/spec-cpu-class-contrib.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +16,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Callable to parse the given keyword in logfile"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,51 +38,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parsing the Prefetch useful metric for each class from each trace log"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'450.soplex-247B': {'stream:pref_useful:': 14.53785185263735,\n",
-       "  'CS:pref_filled:': 43.49323524911644,\n",
-       "  'CPLX:pref_useful:': 0.7002967673716469,\n",
-       "  'ISB:pref_useful:': 41.22316936645696,\n",
-       "  'NL:pref_useful:': 0.04544676441760729},\n",
-       " '462.libquantum-714B': {'stream:pref_useful:': 93.95123573293176,\n",
-       "  'CS:pref_filled:': 0.195120090486631,\n",
-       "  'CPLX:pref_useful:': 0.10141600963244782,\n",
-       "  'ISB:pref_useful:': 5.752228166949161,\n",
-       "  'NL:pref_useful:': 0.0},\n",
-       " '471.omnetpp-188B': {'stream:pref_useful:': 8.77533474560063,\n",
-       "  'CS:pref_filled:': 1.6634820828453238,\n",
-       "  'CPLX:pref_useful:': 0.5543725944856002,\n",
-       "  'ISB:pref_useful:': 88.9656447461653,\n",
-       "  'NL:pref_useful:': 0.04116583090315283},\n",
-       " '482.sphinx3-234B': {'stream:pref_useful:': 7.935397084865822,\n",
-       "  'CS:pref_filled:': 78.28327203378286,\n",
-       "  'CPLX:pref_useful:': 0.31645892930118513,\n",
-       "  'ISB:pref_useful:': 13.4601042092358,\n",
-       "  'NL:pref_useful:': 0.004767742814330473},\n",
-       " '602.gcc_s-2226B': {'stream:pref_useful:': 83.8396067577654,\n",
-       "  'CS:pref_filled:': 0.6588125024798487,\n",
-       "  'CPLX:pref_useful:': 12.531976010786313,\n",
-       "  'ISB:pref_useful:': 2.9687213413716615,\n",
-       "  'NL:pref_useful:': 0.0008833875967889609},\n",
-       " '623.xalancbmk_s-10B': {'stream:pref_useful:': 6.598872456147876,\n",
-       "  'CS:pref_filled:': 4.6208584104958454,\n",
-       "  'CPLX:pref_useful:': 0.7721133234925195,\n",
-       "  'ISB:pref_useful:': 87.97431275584982,\n",
-       "  'NL:pref_useful:': 0.033843054013932665}}"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'groups' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m classes \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstream:pref_useful:\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCS:pref_filled:\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCPLX:pref_useful:\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mISB:pref_useful:\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNL:pref_useful:\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m----> 2\u001b[0m data \u001b[38;5;241m=\u001b[39m {group:{c:\u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m classes} \u001b[38;5;28;01mfor\u001b[39;00m group \u001b[38;5;129;01min\u001b[39;00m \u001b[43mgroups\u001b[49m}\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m data\u001b[38;5;241m.\u001b[39mkeys():\n\u001b[1;32m      5\u001b[0m     log_file \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../logs/SPEC-CPU/v3/\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m key \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m-ipcp-isbv3-all-pf-miss-train.log\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'groups' is not defined"
+     ]
     }
    ],
    "source": [
+    "groups = ['450.soplex-247B', '462.libquantum-714B', '471.omnetpp-188B', '482.sphinx3-234B', '602.gcc_s-2226B', '623.xalancbmk_s-10B']\n",
     "classes = [\"stream:pref_useful:\", \"CS:pref_filled:\", \"CPLX:pref_useful:\", \"ISB:pref_useful:\", \"NL:pref_useful:\"]\n",
     "data = {group:{c:None for c in classes} for group in groups}\n",
     "\n",
@@ -89,13 +76,19 @@
     "    for item in classes:\n",
     "        acc = acc + data[group][item]\n",
     "    for item in classes:\n",
-    "        data[group][item] = 100*data[group][item]/acc\n",
-    "data"
+    "        data[group][item] = 100*data[group][item]/acc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot showing per class contribution in V3 combined prefetcher"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
