--- a/plotter/spec-cpu-mpki.ipynb
+++ b/plotter/spec-cpu-mpki.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "  'LLC LOAD      ACCESS': {}}}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,21 +64,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../logs/SPEC-CPU/v3/450.soplex-247B-isb-l1.log'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 14\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m config \u001b[38;5;129;01min\u001b[39;00m configs:\n\u001b[1;32m     13\u001b[0m             log_file \u001b[38;5;241m=\u001b[39m base_dir \u001b[38;5;241m+\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtrace\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m-\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconfig\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.log\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 14\u001b[0m             mpki_values[trace][field][config] \u001b[38;5;241m=\u001b[39m \u001b[43mextract_mpki\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfield\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlog_file\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# Calculate geometric mean for each configuration (excluding baseline)\u001b[39;00m\n\u001b[1;32m     16\u001b[0m geomeans \u001b[38;5;241m=\u001b[39m {field: {} \u001b[38;5;28;01mfor\u001b[39;00m field \u001b[38;5;129;01min\u001b[39;00m fields}\n",
-      "Cell \u001b[0;32mIn[3], line 2\u001b[0m, in \u001b[0;36mextract_mpki\u001b[0;34m(field, log_file)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mextract_mpki\u001b[39m(field, log_file):\n\u001b[0;32m----> 2\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mlog_file\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m      3\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m f:\n\u001b[1;32m      4\u001b[0m             \u001b[38;5;28;01mif\u001b[39;00m field \u001b[38;5;129;01min\u001b[39;00m line:\n",
-      "File \u001b[0;32m~/CS683_Project/.venv/lib/python3.12/site-packages/IPython/core/interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    322\u001b[0m     )\n\u001b[0;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../logs/SPEC-CPU/v3/450.soplex-247B-isb-l1.log'"
-     ]
+     "data": {
+      "text/plain": [
+       "{'450.soplex-247B': {'L1D LOAD      ACCESS': {'baseline': 44.6552,\n",
+       "   'ipcp': 30.9107,\n",
+       "   'ipcp_isb-V3-train_on_miss-pf_on_all': 22.9603,\n",
+       "   'isb-l1': 29.552},\n",
+       "  'L2C LOAD      ACCESS': {'baseline': 35.271,\n",
+       "   'ipcp': 17.8316,\n",
+       "   'ipcp_isb-V3-train_on_miss-pf_on_all': 11.0091,\n",
+       "   'isb-l1': 18.3442},\n",
+       "  'LLC LOAD      ACCESS': {'baseline': 29.4909,\n",
+       "   'ipcp': 14.9201,\n",
+       "   'ipcp_isb-V3-train_on_miss-pf_on_all': 8.29688,\n",
+       "   'isb-l1': 13.9097}},\n",
+       " '462.libquantum-714B': {'L1D LOAD      ACCESS': {'baseline': 26.5299,\n",
+       "   'ipcp': 4.82868,\n",
+       "   'ipcp_isb-V3-train_on_miss-pf_on_all': 4.64934,\n",
+       "   'isb-l1': 6.261},\n",
+       "  'L2C LOAD      ACCESS': {'baseline': 26.5299,\n",
+       "   'ipcp': 1.25794,\n",
+       "   'ipcp_isb-V3-train_on_miss-pf_on_all': 0.40836,\n",
+       "   'isb-l1': 3.4964},\n",
+       "  'LLC LOAD      ACCESS': {'baseline': 26.5299,\n",
+       "   'ipcp': 1.25794,\n",
+       "   'ipcp_isb-V3-train_on_miss-pf_on_all': 0.40836,\n",
+       "   'isb-l1': 3.4964}},\n",
+       " '471.omnetpp-188B': {'L1D LOAD      ACCESS': {'baseline': 19.9641,\n",
+       "   'ipcp': 18.6855,\n",
+       "   'ipcp_isb-V3-train_on_miss-pf_on_all': 10.6435,\n",
+       "   'isb-l1': 10.6878},\n",
+       "  'L2C LOAD      ACCESS': {'baseline': 17.7374,\n",
+       "   'ipcp': 15.9487,\n",
+       "   'ipcp_isb-V3-train_on_miss-pf_on_all': 5.7448,\n",
+       "   'isb-l1': 6.42916},\n",
+       "  'LLC LOAD      ACCESS': {'baseline': 14.2411,\n",
+       "   'ipcp': 13.4045,\n",
+       "   'ipcp_isb-V3-train_on_miss-pf_on_all': 4.3773,\n",
+       "   'isb-l1': 4.73208}},\n",
+       " '482.sphinx3-234B': {'L1D LOAD      ACCESS': {'baseline': 13.5356,\n",
+       "   'ipcp': 3.18386,\n",
+       "   'ipcp_isb-V3-train_on_miss-pf_on_all': 2.97174,\n",
+       "   'isb-l1': 4.68086},\n",
+       "  'L2C LOAD      ACCESS': {'baseline': 11.4625,\n",
+       "   'ipcp': 1.35332,\n",
+       "   'ipcp_isb-V3-train_on_miss-pf_on_all': 0.97088,\n",
+       "   'isb-l1': 2.64712},\n",
+       "  'LLC LOAD      ACCESS': {'baseline': 11.0429,\n",
+       "   'ipcp': 1.16638,\n",
+       "   'ipcp_isb-V3-train_on_miss-pf_on_all': 0.76944,\n",
+       "   'isb-l1': 2.35354}},\n",
+       " '602.gcc_s-2226B': {'L1D LOAD      ACCESS': {'baseline': 70.0729,\n",
+       "   'ipcp': 3.64502,\n",
+       "   'ipcp_isb-V3-train_on_miss-pf_on_all': 4.46376,\n",
+       "   'isb-l1': 9.41372},\n",
+       "  'L2C LOAD      ACCESS': {'baseline': 70.0422,\n",
+       "   'ipcp': 1.74056,\n",
+       "   'ipcp_isb-V3-train_on_miss-pf_on_all': 0.94372,\n",
+       "   'isb-l1': 7.47504},\n",
+       "  'LLC LOAD      ACCESS': {'baseline': 70.0402,\n",
+       "   'ipcp': 1.7157,\n",
+       "   'ipcp_isb-V3-train_on_miss-pf_on_all': 0.91944,\n",
+       "   'isb-l1': 7.46668}},\n",
+       " '623.xalancbmk_s-10B': {'L1D LOAD      ACCESS': {'baseline': 26.7053,\n",
+       "   'ipcp': 23.1679,\n",
+       "   'ipcp_isb-V3-train_on_miss-pf_on_all': 8.515,\n",
+       "   'isb-l1': 11.7586},\n",
+       "  'L2C LOAD      ACCESS': {'baseline': 25.0848,\n",
+       "   'ipcp': 21.0487,\n",
+       "   'ipcp_isb-V3-train_on_miss-pf_on_all': 7.32218,\n",
+       "   'isb-l1': 10.7338},\n",
+       "  'LLC LOAD      ACCESS': {'baseline': 23.6013,\n",
+       "   'ipcp': 19.7168,\n",
+       "   'ipcp_isb-V3-train_on_miss-pf_on_all': 6.50684,\n",
+       "   'isb-l1': 9.8338}},\n",
+       " 'Geomean': {'L1D LOAD      ACCESS': {'baseline': np.float64(29.034459258595803),\n",
+       "   'ipcp': np.float64(9.531554956126447),\n",
+       "   'ipcp_isb-V3-train_on_miss-pf_on_all': np.float64(7.102178849354985),\n",
+       "   'isb-l1': np.float64(10.040613295028676)},\n",
+       "  'L2C LOAD      ACCESS': {'baseline': np.float64(26.34402840663202),\n",
+       "   'ipcp': np.float64(5.106794528720243),\n",
+       "   'ipcp_isb-V3-train_on_miss-pf_on_all': np.float64(2.361129677792725),\n",
+       "   'isb-l1': np.float64(6.664012380667638)},\n",
+       "  'LLC LOAD      ACCESS': {'baseline': np.float64(24.250587793154793),\n",
+       "   'ipcp': np.float64(4.635892475658012),\n",
+       "   'ipcp_isb-V3-train_on_miss-pf_on_all': np.float64(2.02164749911944),\n",
+       "   'isb-l1': np.float64(5.842430765354048)}}}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -110,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
